Fix fabric detail table wrapping

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ table {
   width: 100%;
   border-collapse: collapse;
   table-layout: fixed;
-  min-width: 0;
+  min-width: 1240px;
 }
 
 th,
@@ -279,7 +279,7 @@ td:nth-child(3) {
 
 th:nth-child(4),
 td:nth-child(4) {
-  width: 13%;
+  width: 12%;
 }
 
 th:nth-child(5),
@@ -294,12 +294,12 @@ td:nth-child(6) {
 
 th:nth-child(7),
 td:nth-child(7) {
-  width: 19%;
+  width: 23%;
 }
 
 th:nth-child(8),
 td:nth-child(8) {
-  width: 14%;
+  width: 11%;
 }
 
 th:nth-child(9),
@@ -320,15 +320,24 @@ td:nth-child(9) {
 }
 
 .detail-cell {
-  display: grid;
-  gap: 3px;
   color: var(--sub);
   font-size: 0.84rem;
-  line-height: 1.35;
+  line-height: 1.65;
+  text-align: center;
 }
 
 .detail-cell b {
   color: var(--brand-dark);
+}
+
+.detail-cell span {
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  margin: 0 7px 2px;
+  white-space: nowrap;
+  overflow-wrap: normal;
+  vertical-align: middle;
 }
 
 .row-actions {
